Update game credits and enhance README with installation, usage, features, and contributing guidelines
Co-Authored-By: Pulkit Kumar Mathur <97748031+Pulkit1822@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <span class="game_name text">
                     Taptiles
                 </span>
-                <span class="text">by <u><a class="text" target="_blank" href="https://github.com/Jaagrav/tap-tiles">Jaagrav</a></u></span>
+                <span class="text">by <u><a class="text" target="_blank" href="https://github.com/cloud2221/plates">Sander</a></u></span>
             </div>
             <img src="src/assets/logo.png" class="game_logo"/>
             <img src="src/assets/playbtn.png" class="game_playbtn"/>
